rfc5424/parser.go

//line rfc5424/parser.rl:1
package rfc5424

import (
  "fmt"
  "os"
)
 

//line rfc5424/parser.go:12
const rfc5424_start int = 1
const rfc5424_first_final int = 7
const rfc5424_error int = 0

const rfc5424_en_main int = 1


//line rfc5424/parser.rl:11


func utf8ToNum(bseq []uint8) int {
  out := 0
  ord := 1
  for i := len(bseq) - 1; i >= 0; i-- {
    out += (int(bseq[i]) - '0') * ord
    ord *= 10
  }
  return out
}

func parse(data string) Message {
    cs, p, pe := 0, 0, len(data)

    privalChars := []uint8{}
    var prival *Prival

    
//line rfc5424/parser.go:40
	{
	cs = rfc5424_start
	}

//line rfc5424/parser.go:45
	{
	if p == pe {
		goto _test_eof
	}
	switch cs {
	case 1:
		goto st_case_1
	case 0:
		goto st_case_0
	case 2:
		goto st_case_2
	case 3:
		goto st_case_3
	case 7:
		goto st_case_7
	case 4:
		goto st_case_4
	case 5:
		goto st_case_5
	case 6:
		goto st_case_6
	}
	goto st_out
	st_case_1:
		if data[p] == 60 {
			goto st2
		}
		goto st0
st_case_0:
	st0:
		cs = 0
		goto _out
	st2:
		if p++; p == pe {
			goto _test_eof2
		}
	st_case_2:
		switch data[p] {
		case 48:
			goto tr2
		case 49:
			goto tr3
		}
		if 50 <= data[p] && data[p] <= 57 {
			goto tr4
		}
		goto st0
tr2:
//line rfc5424/machines.rl:7
 privalChars = append(privalChars, data[p]) 
	goto st3
	st3:
		if p++; p == pe {
			goto _test_eof3
		}
	st_case_3:
//line rfc5424/parser.go:102
		if data[p] == 62 {
			goto tr5
		}
		goto st0
tr5:
//line rfc5424/machines.rl:8
 prival = NewPrival(utf8ToNum(privalChars)) 
	goto st7
	st7:
		if p++; p == pe {
			goto _test_eof7
		}
	st_case_7:
//line rfc5424/parser.go:116
		goto st0
tr3:
//line rfc5424/machines.rl:7
 privalChars = append(privalChars, data[p]) 
	goto st4
	st4:
		if p++; p == pe {
			goto _test_eof4
		}
	st_case_4:
//line rfc5424/parser.go:127
		switch data[p] {
		case 57:
			goto tr6
		case 62:
			goto tr5
		}
		if 48 <= data[p] && data[p] <= 56 {
			goto tr4
		}
		goto st0
tr4:
//line rfc5424/machines.rl:7
 privalChars = append(privalChars, data[p]) 
	goto st5
	st5:
		if p++; p == pe {
			goto _test_eof5
		}
	st_case_5:
//line rfc5424/parser.go:147
		if data[p] == 62 {
			goto tr5
		}
		if 48 <= data[p] && data[p] <= 57 {
			goto tr2
		}
		goto st0
tr6:
//line rfc5424/machines.rl:7
 privalChars = append(privalChars, data[p]) 
	goto st6
	st6:
		if p++; p == pe {
			goto _test_eof6
		}
	st_case_6:
//line rfc5424/parser.go:164
		if data[p] == 62 {
			goto tr5
		}
		if 48 <= data[p] && data[p] <= 49 {
			goto tr2
		}
		goto st0
	st_out:
	_test_eof2: cs = 2; goto _test_eof
	_test_eof3: cs = 3; goto _test_eof
	_test_eof7: cs = 7; goto _test_eof
	_test_eof4: cs = 4; goto _test_eof
	_test_eof5: cs = 5; goto _test_eof
	_test_eof6: cs = 6; goto _test_eof

	_test_eof: {}
	_out: {}
	}

//line rfc5424/parser.rl:34


    if cs < rfc5424_first_final {
        fmt.Fprintln(os.Stderr, fmt.Errorf("error"))
    }

    return Message{
      Prival: *prival,
    }
}
